# DirectPulseTracker

./: app.py  auth.py  config.py  main.py  models.py  pyproject.toml  replit.md  report_generator.py  scheduler.py  telegram_bot.py  yandex_campaigns.py  yandex_direct.py
app_routes/: account_manager.py  diagnostics.py  main.py  optimization.py
app_routes/routes/: admin.py  auth.py  reports.py
attached_assets/: Pasted--2025-05-22-09-35-47-0000-7401-ERROR-Exception-in-worker-process-Traceback-most-recent-call--1747906563612.txt  Pasted-INFO-app-Database-tables-created-INFO-main-Application-initialized-and-ready-ERROR-app-Exception-o-1747906506917.txt
migrations/versions/: 81f22004e647_add_multi_account_support_and_campaigns_.py  e237181487fa_initial_migration.py
routes/: admin.py  auth.py  diagnostics.py  main.py  reports.py
static/css/: custom.css
static/js/: charts.js  conditions.js  cronstrue.min.js  reports.js
templates/: base.html  dashboard.html  login.html  register.html  report.html
templates/account_manager/: account_details.html  index.html
templates/admin/: dashboard.html  reports.html  templates.html  tokens.html  user_form.html  users.html
templates/auth/: yandex_token_form.html
templates/diagnostics/: account_details.html  index.html
templates/includes/: footer.html  header.html
templates/optimization/: analyze.html  index.html  results.html
templates/reports/: conditions.html  generate.html  list.html  schedule_form.html  schedules.html  template_form.html  templates.html
