[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.41",
    "numpy>=2.2.6",
    "requests>=2.32.3",
    "apscheduler>=3.11.0",
    "pytz>=2025.2",
    "python-telegram-bot>=20.0",
    "telegram>=0.0.1",
    "flask-migrate>=4.1.0",
    "tapi-yandex-direct>=2021.5.29",
    "routes>=2.5.1",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
]
